Blender crash: Curve to Mesh Geometry Node #89979

Closed
opened 2021-07-20 09:30:21 +02:00 by Himanshi Kalra · 11 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: GeForce MX150/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.49

Blender Version
Broken: version: 3.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes with Curve to Mesh node.
Exact steps for others to reproduce the error
Enter Edit Mode in the viewport. Blender crashes.
curve_to_mesh_crash.blend
curve_to_mesh_crash.crash.txt

I am on a Lite Build, if it is related.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: GeForce MX150/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.49 **Blender Version** Broken: version: 3.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes with Curve to Mesh node. **Exact steps for others to reproduce the error** Enter Edit Mode in the viewport. Blender crashes. [curve_to_mesh_crash.blend](https://archive.blender.org/developer/F10229249/curve_to_mesh_crash.blend) [curve_to_mesh_crash.crash.txt](https://archive.blender.org/developer/F10229845/curve_to_mesh_crash.crash.txt) I am on a Lite Build, if it is related.
Author
Member

Added subscriber: @Calra

Added subscriber: @Calra
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Can not reproduce the crash on present master (d218ba8009)

Can you please check again updating to recent master?

I think the issue is possibly resolved with the commit ceb612a79c

Can not reproduce the crash on present master (`d218ba8009`) Can you please check again updating to recent master? I think the issue is possibly resolved with the commit ceb612a79c
Author
Member

I updated to master and did a fresh build, can still reproduce the issue.

curve_to_mesh_crash.crash.txt

I updated to master and did a fresh build, can still reproduce the issue. [curve_to_mesh_crash.crash.txt](https://archive.blender.org/developer/F10229845/curve_to_mesh_crash.crash.txt)
Member

Does this happen when you run the blender from debug build? (I will try with the debug build)

if yes then did you get any error message in dialog box after the crash?

(crash occurs at ucrtbased.dll and I guess it is used in debug mode)

Does this happen when you run the blender from debug build? (I will try with the debug build) if yes then did you get any error message in dialog box after the crash? (crash occurs at `ucrtbased.dll` and I guess it is used in debug mode)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm with the debug build. (lite build)

Can confirm with the debug build. (lite build)
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for the report. This isn't a crash but an assert, because the resulting normals are tagged as dirty. I'll look into this now.

Thanks for the report. This isn't a crash but an assert, because the resulting normals are tagged as dirty. I'll look into this now.

This issue was referenced by 76a3ff70d5

This issue was referenced by 76a3ff70d599a54203888dd7131b0d48da0107d6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-07-20 15:39:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89979
No description provided.